--- a/Exo-13/exo-13.html
+++ b/Exo-13/exo-13.html
@@ -9,5 +9,12 @@
 </head>
 <body>
     <p>Exo 13 - 21/07/22</p>
+    <ul id="liste1">
+        <li id="li"></li>
+        <li id="li"></li>
+        <li id="li"></li>
+        <li id="li"></li>
+        
+    </ul>
 </body>
 </html>
